Fix broken CSS left after removing fake EQ animation.

--- a/src/style.css
+++ b/src/style.css
@@ -479,8 +479,6 @@ svg {
   }
 }
 
-  50% { transform: scaleY(1); }
-}
 
 @media (hover: none) {
   .row:hover,
